tests/ui/runtime-frame-header-peer-role-removed.stderr
error[E0599]: no method named `peer_role` found for struct `FrameHeader` in the current scope
 --> tests/ui/runtime-frame-header-peer-role-removed.rs:5:20
  |
5 |     let _ = header.peer_role();
  |                    ^^^^^^^^^ method not found in `FrameHeader`
